@@ -1,52 +1,49 @@
-/*
- * Copyright (c) 2008 Sun Microsystems, Inc. All Rights Reserved.
- * 
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- * 
- * - Redistribution of source code must retain the above copyright
- *   notice, this list of conditions and the following disclaimer.
- * 
- * - Redistribution in binary form must reproduce the above copyright
- *   notice, this list of conditions and the following disclaimer in the
- *   documentation and/or other materials provided with the distribution.
- * 
- * Neither the name of Sun Microsystems, Inc. or the names of
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- * 
- * This software is provided "AS IS," without a warranty of any kind. ALL
- * EXPRESS OR IMPLIED CONDITIONS, REPRESENTATIONS AND WARRANTIES,
- * INCLUDING ANY IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A
- * PARTICULAR PURPOSE OR NON-INFRINGEMENT, ARE HEREBY EXCLUDED. SUN
- * MICROSYSTEMS, INC. ("SUN") AND ITS LICENSORS SHALL NOT BE LIABLE FOR
- * ANY DAMAGES SUFFERED BY LICENSEE AS A RESULT OF USING, MODIFYING OR
- * DISTRIBUTING THIS SOFTWARE OR ITS DERIVATIVES. IN NO EVENT WILL SUN OR
- * ITS LICENSORS BE LIABLE FOR ANY LOST REVENUE, PROFIT OR DATA, OR FOR
- * DIRECT, INDIRECT, SPECIAL, CONSEQUENTIAL, INCIDENTAL OR PUNITIVE
- * DAMAGES, HOWEVER CAUSED AND REGARDLESS OF THE THEORY OF LIABILITY,
- * ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF
- * SUN HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
- * 
+/**
+ * Copyright 2012 JogAmp Community. All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without modification, are
+ * permitted provided that the following conditions are met:
+ *
+ *    1. Redistributions of source code must retain the above copyright notice, this list of
+ *       conditions and the following disclaimer.
+ *
+ *    2. Redistributions in binary form must reproduce the above copyright notice, this list
+ *       of conditions and the following disclaimer in the documentation and/or other materials
+ *       provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY JogAmp Community ``AS IS'' AND ANY EXPRESS OR IMPLIED
+ * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
+ * FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL JogAmp Community OR
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+ * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+ * ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+ * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ *
+ * The views and conclusions contained in the software and documentation are those of the
+ * authors and should not be interpreted as representing official policies, either expressed
+ * or implied, of JogAmp Community.
  */
 
 package com.jogamp.opengl.test.junit.jogl.demos.es2.av;
 
-import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import javax.media.opengl.GL2ES2;
+import javax.media.opengl.GLAnimatorControl;
 import javax.media.opengl.GLAutoDrawable;
 import javax.media.opengl.GLCapabilities;
 import javax.media.opengl.GLEventListener;
 import javax.media.opengl.GLException;
 import javax.media.opengl.GLProfile;
 
+import com.jogamp.common.util.IOUtil;
+import com.jogamp.graph.curve.Region;
+import com.jogamp.graph.font.Font;
 import com.jogamp.newt.Window;
 import com.jogamp.newt.event.KeyAdapter;
 import com.jogamp.newt.event.KeyEvent;
@@ -55,183 +52,512 @@ import com.jogamp.newt.event.WindowAdapter;
 import com.jogamp.newt.event.WindowEvent;
 import com.jogamp.newt.opengl.GLWindow;
 import com.jogamp.opengl.JoglVersion;
-import com.jogamp.opengl.test.junit.jogl.demos.es2.TexCubeES2;
+import com.jogamp.opengl.test.junit.graph.TextRendererGLELBase;
+import com.jogamp.opengl.test.junit.jogl.demos.es2.TextureSequenceCubeES2;
 import com.jogamp.opengl.test.junit.util.MiscUtils;
+import com.jogamp.opengl.test.junit.util.UITestCase;
 import com.jogamp.opengl.util.Animator;
 import com.jogamp.opengl.util.av.GLMediaPlayer;
 import com.jogamp.opengl.util.av.GLMediaPlayer.GLMediaEventListener;
+import com.jogamp.opengl.util.av.GLMediaPlayer.StreamException;
 import com.jogamp.opengl.util.av.GLMediaPlayerFactory;
+import com.jogamp.opengl.util.texture.TextureSequence.TextureFrame;
 
-public class MovieCube implements GLEventListener, GLMediaEventListener {
-    static boolean waitForKey = false;
-    final URLConnection stream;
-    final float zoom0, rotx, roty;
-    TexCubeES2 cube=null;
-    GLMediaPlayer mPlayer=null;
-    
-    public MovieCube() throws IOException {
-        this(new URL("http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4").openConnection(), 
-             -2.3f, 0f, 0f);        
+/**
+ * Simple cube movie player w/ aspect ration true projection on a cube.
+ */
+public class MovieCube implements GLEventListener {
+    public static final float zoom_def = -2.77f;
+    private static boolean waitForKey = false;
+    private final float zoom0, rotx, roty;
+    private TextureSequenceCubeES2 cube=null;
+    private GLMediaPlayer mPlayer=null;
+    private int swapInterval = 1;
+    private int swapIntervalSet = -1;
+    private long lastPerfPos = 0;
+    private volatile boolean resetGLState = false;
+
+    /** Blender's Big Buck Bunny Trailer: 24f 640p VP8, Vorbis 44100Hz mono, WebM/Matroska Stream. */
+    public static final URI defURI;
+    static {
+        URI _defURI = null;
+        try {
+            _defURI = new URI("http://video.webmfiles.org/big-buck-bunny_trailer.webm");
+        } catch (URISyntaxException e) {
+            e.printStackTrace();
+        }
+        defURI = _defURI;
     }
-    
-    public MovieCube(URLConnection stream, float zoom0, float rotx, float roty) throws IOException {
-        this.stream = stream;
+
+    /**
+     * Default constructor which also issues {@link #initStream(URI, int, int, int)} w/ default values
+     * and polls until the {@link GLMediaPlayer} is {@link GLMediaPlayer.State#Initialized}.
+     * If {@link GLMediaEventListener#EVENT_CHANGE_EOS} is reached, the stream is started over again.
+     * <p>
+     * This default constructor is merely useful for some <i>drop-in</i> test, e.g. using an applet.
+     * </p>
+     */
+    public MovieCube() throws IOException, URISyntaxException {
+        this(zoom_def, 0f, 0f);
+
+        mPlayer.addEventListener(new GLMediaEventListener() {
+            @Override
+            public void newFrameAvailable(GLMediaPlayer ts, TextureFrame newFrame, long when) { }
+
+            @Override
+            public void attributesChanged(final GLMediaPlayer mp, int event_mask, long when) {
+                System.err.println("MovieCube AttributesChanges: events_mask 0x"+Integer.toHexString(event_mask)+", when "+when);
+                System.err.println("MovieCube State: "+mp);
+                if( 0 != ( GLMediaEventListener.EVENT_CHANGE_SIZE & event_mask ) ) {
+                    resetGLState();
+                }
+                if( 0 != ( GLMediaEventListener.EVENT_CHANGE_EOS & event_mask ) ) {
+                    new Thread() {
+                        public void run() {
+                            // loop for-ever ..
+                            mPlayer.seek(0);
+                            mPlayer.play();
+                        } }.start();
+                }
+            }
+        });
+        initStream(defURI, GLMediaPlayer.STREAM_ID_AUTO, GLMediaPlayer.STREAM_ID_AUTO, GLMediaPlayer.TEXTURE_COUNT_DEFAULT);
+        StreamException se = null;
+        while( null == se && GLMediaPlayer.State.Initialized != mPlayer.getState() ) {
+            try {
+                Thread.sleep(16);
+            } catch (InterruptedException e) { }
+            se = mPlayer.getStreamException();
+        }
+        if( null != se ) {
+            se.printStackTrace();
+            throw new RuntimeException(se);
+        }
+    }
+
+    /** Custom constructor, user needs to issue {@link #initStream(URI, int, int, int)} afterwards. */
+    public MovieCube(float zoom0, float rotx, float roty) throws IOException {
         this.zoom0 = zoom0;
         this.rotx = rotx;
         this.roty = roty;
+        mPlayer = GLMediaPlayerFactory.createDefault();
     }
 
+    public void initStream(URI streamLoc, int vid, int aid, int textureCount) {
+        mPlayer.initStream(streamLoc, vid, aid, textureCount);
+        System.out.println("pC.1b "+mPlayer);
+    }
+
+    public void setSwapInterval(int v) { this.swapInterval = v; }
+
+    public GLMediaPlayer getGLMediaPlayer() { return mPlayer; }
+
+    public void resetGLState() {
+        resetGLState = true;
+    }
+
+    private final class InfoTextRendererGLELBase extends TextRendererGLELBase {
+        static final float z_diff = 0.001f;
+        final float underlineSize;
+
+        InfoTextRendererGLELBase() {
+            // FIXME: Graph TextRenderer does not AA well w/o MSAA and FBO
+            super(Region.VBAA_RENDERING_BIT);
+            texSizeScale = 2;
+
+            fontSize = 1;
+            pixelScale = 1.0f / ( fontSize * 20f );
+
+            // underlineSize: 'underline' amount of pixel below 0/0 (Note: lineGap is negative)
+            final Font.Metrics metrics = font.getMetrics();
+            final float lineGap = metrics.getLineGap(fontSize);
+            final float descent = metrics.getDescent(fontSize);
+            underlineSize = descent - lineGap;
+            // System.err.println("XXX: fLG "+lineGap+", fDesc "+descent+", underlineSize "+underlineSize);
+
+            staticRGBAColor[0] = 0.0f;
+            staticRGBAColor[1] = 0.0f;
+            staticRGBAColor[2] = 0.0f;
+            staticRGBAColor[3] = 1.0f;
+        }
+
+        @Override
+        public void init(GLAutoDrawable drawable) {
+            // non-exclusive mode!
+            this.usrPMVMatrix = cube.pmvMatrix;
+            super.init(drawable);
+        }
+
+        @Override
+        public void display(GLAutoDrawable drawable) {
+            final GLAnimatorControl anim = drawable.getAnimator();
+            final float lfps = null != anim ? anim.getLastFPS() : 0f;
+            final float tfps = null != anim ? anim.getTotalFPS() : 0f;
+            final boolean hasVideo = GLMediaPlayer.STREAM_ID_NONE != mPlayer.getVID();
+            final float pts = ( hasVideo ? mPlayer.getVideoPTS() : mPlayer.getAudioPTS() ) / 1000f;
+
+            // Note: MODELVIEW is from [ -1 .. 1 ]
+
+            // dy: position right above video rectangle (bottom text line)
+            final float aspect = (float)mPlayer.getWidth() / (float)mPlayer.getHeight();
+            final float aspect_h = 1f/aspect;
+            final float dy = 1f-aspect_h;
+
+            // yoff1: position right above video rectangle (bottom text line)
+            //        less than underlineSize, so 'underline' pixels are above video.
+            final float yoff1 = dy-(pixelScale*underlineSize);
+
+            // yoff2: position right below video rectangle (bottom text line)
+            final float yoff2 = 2f-dy;
+
+            /**
+            System.err.println("XXX: a "+aspect+", aspect_h "+aspect_h+", dy "+dy+
+                               "; underlineSize "+underlineSize+" "+(pixelScale*underlineSize)+
+                               "; yoff "+yoff1+", yoff2 "+yoff2); */
+
+            // FIXME: Graph TextRenderer does not scale well, i.e. text update per 1/10s cause too much recompute of regions!
+            // final String text1 = String.format("%03.1f/%03.1f s, %s (%01.2fx, vol %01.2f), a %01.2f, fps %02.1f -> %02.1f / %02.1f, v-sync %d",
+            final String text1 = String.format("%03.0f/%03.0f s, %s (%01.2fx, vol %01.2f), a %01.2f, fps %02.1f -> %02.1f / %02.1f, v-sync %d",
+                    pts, mPlayer.getDuration() / 1000f,
+                    mPlayer.getState().toString().toLowerCase(), mPlayer.getPlaySpeed(), mPlayer.getAudioVolume(),
+                    aspect, mPlayer.getFramerate(), lfps, tfps, swapIntervalSet);
+            final String text2 = String.format("audio: id %d, kbps %d, codec %s",
+                    mPlayer.getAID(), mPlayer.getAudioBitrate()/1000, mPlayer.getAudioCodec());
+            final String text3 = String.format("video: id %d, kbps %d, codec %s",
+                    mPlayer.getVID(), mPlayer.getVideoBitrate()/1000, mPlayer.getVideoCodec());
+            final String text4 = mPlayer.getURI().getRawPath();
+            if( displayOSD && null != renderer ) {
+                renderString(drawable, text1, 1 /* col */, -1 /* row */, -1+z_diff, yoff1, 1f+z_diff);
+                renderString(drawable, text2, 1 /* col */,  0 /* row */, -1+z_diff, yoff2, 1f+z_diff);
+                renderString(drawable, text3, 1 /* col */,  1 /* row */, -1+z_diff, yoff2, 1f+z_diff);
+                renderString(drawable, text4, 1 /* col */,  2 /* row */, -1+z_diff, yoff2, 1f+z_diff);
+            }
+        } };
+    private final InfoTextRendererGLELBase textRendererGLEL = new InfoTextRendererGLELBase();
+    private boolean displayOSD = true;
+
     private final KeyListener keyAction = new KeyAdapter() {
-        public void keyTyped(KeyEvent e)  {
+        public void keyReleased(KeyEvent e)  {
+            if( e.isAutoRepeat() ) {
+                return;
+            }
             System.err.println("MC "+e);
-            int pts0 = mPlayer.getCurrentPosition();
+            final int pts0 = GLMediaPlayer.STREAM_ID_NONE != mPlayer.getVID() ? mPlayer.getVideoPTS() : mPlayer.getAudioPTS();
             int pts1 = 0;
-            switch(e.getKeyCode()) {
-                case KeyEvent.VK_3:
+            switch(e.getKeySymbol()) {
+                case KeyEvent.VK_V: {
+                    switch(swapIntervalSet) {
+                        case 0: swapInterval = 1; break;
+                        default: swapInterval = 0; break;
+                    }
+                    break;
+                }
+                case KeyEvent.VK_O:          displayOSD = !displayOSD; break;
                 case KeyEvent.VK_RIGHT:      pts1 = pts0 +  1000; break;
-                case KeyEvent.VK_4:
                 case KeyEvent.VK_UP:         pts1 = pts0 + 10000; break;
-                case KeyEvent.VK_2:
+                case KeyEvent.VK_PAGE_UP:    pts1 = pts0 + 30000; break;
                 case KeyEvent.VK_LEFT:       pts1 = pts0 -  1000; break;
-                case KeyEvent.VK_1:
                 case KeyEvent.VK_DOWN:       pts1 = pts0 - 10000; break;
+                case KeyEvent.VK_PAGE_DOWN:  pts1 = pts0 - 30000; break;
                 case KeyEvent.VK_ESCAPE:
-                case KeyEvent.VK_DELETE:
+                case KeyEvent.VK_HOME:
                 case KeyEvent.VK_BACK_SPACE: {
                     mPlayer.seek(0);
-                    mPlayer.setPlaySpeed(1.0f);
-                    mPlayer.start();
                     break;
                 }
                 case KeyEvent.VK_SPACE: {
                     if(GLMediaPlayer.State.Paused == mPlayer.getState()) {
-                        mPlayer.start();
+                        mPlayer.play();
                     } else {
-                        mPlayer.pause();
+                        mPlayer.pause(false);
                     }
                     break;
                 }
-                case KeyEvent.VK_S: mPlayer.setPlaySpeed(mPlayer.getPlaySpeed()/2.0f); break;
-                case KeyEvent.VK_F: mPlayer.setPlaySpeed(mPlayer.getPlaySpeed()*2.0f); break;
+                case KeyEvent.VK_MULTIPLY:
+                      mPlayer.setPlaySpeed(1.0f);
+                      break;
+                case KeyEvent.VK_SUBTRACT: {
+                      float playSpeed = mPlayer.getPlaySpeed();
+                      if( e.isShiftDown() ) {
+                          playSpeed /= 2.0f;
+                      } else {
+                          playSpeed -= 0.1f;
+                      }
+                      mPlayer.setPlaySpeed(playSpeed);
+                    } break;
+                case KeyEvent.VK_ADD: {
+                      float playSpeed = mPlayer.getPlaySpeed();
+                      if( e.isShiftDown() ) {
+                          playSpeed *= 2.0f;
+                      } else {
+                          playSpeed += 0.1f;
+                      }
+                      mPlayer.setPlaySpeed(playSpeed);
+                    } break;
+                case KeyEvent.VK_M: {
+                      float audioVolume = mPlayer.getAudioVolume();
+                      if( audioVolume > 0.5f ) {
+                          audioVolume = 0f;
+                      } else {
+                          audioVolume = 1f;
+                      }
+                      mPlayer.setAudioVolume(audioVolume);
+                    } break;
             }
-            
+
             if( 0 != pts1 ) {
                 mPlayer.seek(pts1);
             }
-        }        
+        }
     };
-    
-    @Override
-    public void attributesChanges(GLMediaPlayer mp, int event_mask, long when) {
-        System.out.println("attributesChanges: "+mp+", 0x"+Integer.toHexString(event_mask)+", when "+when);        
-    }
 
     @Override
-    public void newFrameAvailable(GLMediaPlayer mp, long when) {
-        // System.out.println("newFrameAvailable: "+mp+", when "+when);
-    }
-
     public void init(GLAutoDrawable drawable) {
+        if(null == mPlayer) {
+            throw new InternalError("mPlayer null");
+        }
+        if( GLMediaPlayer.State.Uninitialized == mPlayer.getState() ) {
+            throw new IllegalStateException("mPlayer in uninitialized state: "+mPlayer);
+        }
+        if( GLMediaPlayer.STREAM_ID_NONE == mPlayer.getVID() ) {
+            // throw new IllegalStateException("mPlayer has no VID/stream selected: "+mPlayer);
+        }
+        resetGLState = false;
+
         GL2ES2 gl = drawable.getGL().getGL2ES2();
         System.err.println(JoglVersion.getGLInfo(gl, null));
 
-        mPlayer = GLMediaPlayerFactory.create();
-        mPlayer.addEventListener(this);
-        cube = new TexCubeES2(mPlayer, false, zoom0, rotx, roty);        
-        
+        cube = new TextureSequenceCubeES2(mPlayer, false, zoom0, rotx, roty);
+
         if(waitForKey) {
-            BufferedReader stdin = new BufferedReader(new InputStreamReader(System.in));
-            System.err.println("Press enter to continue");
+            UITestCase.waitForKey("Init>");
+        }
+
+        if( GLMediaPlayer.State.Initialized == mPlayer.getState() ) {
             try {
-                System.err.println(stdin.readLine());
-            } catch (IOException e) { }
-        }
-        try {
-            System.out.println("p0 "+mPlayer);
-            mPlayer.initGLStream(gl, stream);
-            System.out.println("p1 "+mPlayer);
-        } catch (Exception e) { 
-            e.printStackTrace(); 
-            if(null != mPlayer) {
-                mPlayer.destroy(gl);
-                mPlayer = null;
+                mPlayer.initGL(gl);
+            } catch (Exception e) {
+                e.printStackTrace();
+                if(null != mPlayer) {
+                    mPlayer.destroy(gl);
+                    mPlayer = null;
+                }
+                throw new GLException(e);
             }
-            throw new GLException(e);
         }
-        
         cube.init(drawable);
-        mPlayer.start();
+        mPlayer.play();
+        System.out.println("play.0 "+mPlayer);
 
         boolean added;
-        if (drawable instanceof Window) {
-            Window window = (Window) drawable;
+        final Object upstreamWidget = drawable.getUpstreamWidget();
+        if (upstreamWidget instanceof Window) {
+            final Window window = (Window) upstreamWidget;
             window.addKeyListener(keyAction);
             added = true;
-        } else { added = false; }       
+        } else { added = false; }
         System.err.println("MC.init: kl-added "+added+", "+drawable.getClass().getName());
+        drawable.addGLEventListener(textRendererGLEL);
     }
 
+    @Override
     public void reshape(GLAutoDrawable drawable, int x, int y, int width, int height) {
         if(null == mPlayer) { return; }
         cube.reshape(drawable, x, y, width, height);
     }
 
+    @Override
     public void dispose(GLAutoDrawable drawable) {
         System.err.println(Thread.currentThread()+" MovieCube.dispose ... ");
+        drawable.disposeGLEventListener(textRendererGLEL, true);
+        disposeImpl(drawable, true);
+    }
+
+    private void disposeImpl(GLAutoDrawable drawable, boolean disposePlayer) {
         if(null == mPlayer) { return; }
-        mPlayer.stop();
-        GL2ES2 gl = drawable.getGL().getGL2ES2();
-        mPlayer.destroy(gl);
-        mPlayer=null;
+        final Object upstreamWidget = drawable.getUpstreamWidget();
+        if (upstreamWidget instanceof Window) {
+            final Window window = (Window) upstreamWidget;
+            window.removeKeyListener(keyAction);
+        }
+        final GL2ES2 gl = drawable.getGL().getGL2ES2();
+        if( disposePlayer ) {
+            mPlayer.destroy(gl);
+            mPlayer=null;
+        }
         cube.dispose(drawable);
         cube=null;
     }
 
+
+    @Override
     public void display(GLAutoDrawable drawable) {
+        if(-1 != swapInterval) {
+            final GL2ES2 gl = drawable.getGL().getGL2ES2();
+            gl.setSwapInterval(swapInterval); // in case switching the drawable (impl. may bound attribute there)
+            drawable.getAnimator().resetFPSCounter();
+            swapIntervalSet = swapInterval;
+            swapInterval = -1;
+        }
         if(null == mPlayer) { return; }
+
+        if( resetGLState ) {
+            resetGLState = false;
+            System.err.println("XXX resetGLState");
+            disposeImpl(drawable, false);
+            init(drawable);
+            reshape(drawable, 0, 0, drawable.getWidth(), drawable.getHeight());
+        }
+
+        final long currentPos = System.currentTimeMillis();
+        if( currentPos - lastPerfPos > 2000 ) {
+            System.err.println( mPlayer.getPerfString() );
+            lastPerfPos = currentPos;
+        }
         cube.display(drawable);
     }
 
-    public void displayChanged(javax.media.opengl.GLAutoDrawable drawable, boolean modeChanged, boolean deviceChanged) {
-    }
-    
-    public static void main(String[] args) throws MalformedURLException, IOException, InterruptedException {
+    public static void main(String[] args) throws IOException, InterruptedException, URISyntaxException {
+        int swapInterval = 1;
         int width = 510;
         int height = 300;
-        System.err.println("TexCubeES2.run()");
+        int textureCount = GLMediaPlayer.TEXTURE_COUNT_DEFAULT; // default - threaded
 
-        String url_s="http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4";        
-        for(int i=0; i<args.length; i++) {
-            if(args[i].equals("-width")) {
-                i++;
-                width = MiscUtils.atoi(args[i], width);
-            } else if(args[i].equals("-height")) {
-                i++;
-                height = MiscUtils.atoi(args[i], height);
-            } else if(args[i].equals("-url")) {
-                i++;
-                url_s = args[i];
-            } else if(args[i].equals("-wait")) {
-                waitForKey = true;
+        boolean forceES2 = false;
+        boolean forceES3 = false;
+        boolean forceGL3 = false;
+        boolean forceGLDef = false;
+        int vid = GLMediaPlayer.STREAM_ID_AUTO;
+        int aid = GLMediaPlayer.STREAM_ID_AUTO;
+        final boolean origSize;
+
+        String url_s=null, file_s=null;
+        {
+            boolean _origSize = false;
+            for(int i=0; i<args.length; i++) {
+                if(args[i].equals("-vid")) {
+                    i++;
+                    vid = MiscUtils.atoi(args[i], vid);
+                } else if(args[i].equals("-aid")) {
+                    i++;
+                    aid = MiscUtils.atoi(args[i], aid);
+                } else if(args[i].equals("-width")) {
+                    i++;
+                    width = MiscUtils.atoi(args[i], width);
+                } else if(args[i].equals("-height")) {
+                    i++;
+                    height = MiscUtils.atoi(args[i], height);
+                } else if(args[i].equals("-osize")) {
+                    _origSize = true;
+                } else if(args[i].equals("-textureCount")) {
+                    i++;
+                    textureCount = MiscUtils.atoi(args[i], textureCount);
+                } else if(args[i].equals("-url")) {
+                    i++;
+                    url_s = args[i];
+                } else if(args[i].equals("-file")) {
+                    i++;
+                    file_s = args[i];
+                } else if(args[i].equals("-es2")) {
+                    forceES2 = true;
+                } else if(args[i].equals("-es3")) {
+                    forceES3 = true;
+                } else if(args[i].equals("-gl3")) {
+                    forceGL3 = true;
+                } else if(args[i].equals("-gldef")) {
+                    forceGLDef = true;
+                } else if(args[i].equals("-vsync")) {
+                    i++;
+                    swapInterval = MiscUtils.atoi(args[i], swapInterval);
+                } else if(args[i].equals("-wait")) {
+                    waitForKey = true;
+                }
             }
+            origSize = _origSize;
         }
-        final MovieCube mc = new MovieCube(new URL(url_s).openConnection(), -2.3f, 0f, 0f);
-        
-        final GLWindow window = GLWindow.create(new GLCapabilities(GLProfile.getGL2ES2()));
-        // Size OpenGL to Video Surface
-        window.setSize(width, height);
-        window.setFullscreen(false);
-        window.setSize(width, height);
-        window.addGLEventListener(mc);
+        final URI streamLoc;
+        if( null != url_s ) {
+            streamLoc = new URI(url_s);
+        } else if( null != file_s ) {
+            streamLoc = IOUtil.toURISimple(new File(file_s));
+        } else {
+            streamLoc = defURI;
+        }
+        System.err.println("url_s "+url_s);
+        System.err.println("file_s "+file_s);
+        System.err.println("stream "+streamLoc);
+        System.err.println("vid "+vid+", aid "+aid);
+        System.err.println("textureCount "+textureCount);
+        System.err.println("forceES2   "+forceES2);
+        System.err.println("forceES3   "+forceES3);
+        System.err.println("forceGL3   "+forceGL3);
+        System.err.println("forceGLDef "+forceGLDef);
+        System.err.println("swapInterval "+swapInterval);
+
+        final MovieCube mc = new MovieCube(zoom_def, 0f, 0f);
+        mc.setSwapInterval(swapInterval);
+
+        final GLProfile glp;
+        if(forceGLDef) {
+            glp = GLProfile.getDefault();
+        } else if(forceGL3) {
+            glp = GLProfile.get(GLProfile.GL3);
+        } else if(forceES3) {
+            glp = GLProfile.get(GLProfile.GLES3);
+        } else if(forceES2) {
+            glp = GLProfile.get(GLProfile.GLES2);
+        } else {
+            glp = GLProfile.getGL2ES2();
+        }
+        System.err.println("GLProfile: "+glp);
+        final GLWindow window = GLWindow.create(new GLCapabilities(glp));
         final Animator anim = new Animator(window);
         window.addWindowListener(new WindowAdapter() {
             public void windowDestroyed(WindowEvent e) {
                 anim.stop();
-            }                
+            }
         });
-        // anim.setUpdateFPSFrames(60, System.err);
-        anim.start();
+        window.setSize(width, height);
         window.setVisible(true);
+        anim.start();
+
+        mc.mPlayer.addEventListener(new GLMediaEventListener() {
+            @Override
+            public void newFrameAvailable(GLMediaPlayer ts, TextureFrame newFrame, long when) {
+            }
+
+            @Override
+            public void attributesChanged(final GLMediaPlayer mp, int event_mask, long when) {
+                System.err.println("MovieCube AttributesChanges: events_mask 0x"+Integer.toHexString(event_mask)+", when "+when);
+                System.err.println("MovieCube State: "+mp);
+                if( 0 != ( GLMediaEventListener.EVENT_CHANGE_SIZE & event_mask ) ) {
+                    if( origSize ) {
+                        window.setSize(mp.getWidth(), mp.getHeight());
+                    }
+                    // window.disposeGLEventListener(ms, false /* remove */ );
+                    mc.resetGLState();
+                }
+                if( 0 != ( GLMediaEventListener.EVENT_CHANGE_INIT & event_mask ) ) {
+                    window.addGLEventListener(mc);
+                    anim.setUpdateFPSFrames(60, null);
+                    anim.resetFPSCounter();
+                }
+                if( 0 != ( GLMediaEventListener.EVENT_CHANGE_PLAY & event_mask ) ) {
+                    anim.resetFPSCounter();
+                }
+                if( 0 != ( ( GLMediaEventListener.EVENT_CHANGE_ERR | GLMediaEventListener.EVENT_CHANGE_EOS ) & event_mask ) ) {
+                    final StreamException se = mc.mPlayer.getStreamException();
+                    if( null != se ) {
+                        se.printStackTrace();
+                    }
+                    new Thread() {
+                        public void run() {
+                            window.destroy();
+                        } }.start();
+                }
+            }
+        });
+        mc.initStream(streamLoc, vid, aid, textureCount);
     }
 }
 
